Reverts, clean ups and merge resolution after the automated Git merge