@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.peregrine-cms</groupId>
         <artifactId>testing.parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>com.peregrine-cms</groupId>
             <artifactId>commons-test</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
@@ -212,7 +212,7 @@
                         <!-- the Sling instance is provisioned from the model in src/main/provisioning/model.txt -->
                         <groupId>org.apache.sling</groupId>
                         <artifactId>slingstart-maven-plugin</artifactId>
-                        <version>1.7.6</version>
+                        <version>1.8.2</version>
                         <extensions>true</extensions>
                         <executions>
                             <execution>
@@ -377,7 +377,7 @@
                                     <goal>install</goal>
                                 </goals>
                                 <configuration>
-                                    <bundleFileName>${project.basedir}/../testing.config.client//target/testing.config.client-1.0-SNAPSHOT.jar</bundleFileName>
+                                    <bundleFileName>${project.basedir}/../testing.config.client//target/testing.config.client-1.0.0-SNAPSHOT.jar</bundleFileName>
                                 </configuration>
                             </execution>
                         </executions>
@@ -411,6 +411,15 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>Java11Options</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <sling.vm.options>--add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning -XX:+UseParallelGC</sling.vm.options>
+            </properties>
         </profile>
     </profiles>
 </project>
